--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ configure(subprojects) {
     dependencies {
         compile('org.springframework.boot:spring-boot-starter-web')
         compile('org.springframework.boot:spring-boot-starter')
-        compileOnly('org.projectlombok:lombok')
+        compile('org.projectlombok:lombok')
         testCompile('org.springframework.boot:spring-boot-starter-test')
     }
 }
