--- a/sftp-api/src/main/resources/application.properties
+++ b/sftp-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-#sftp 配置信息
+#sftp 配置信息 根据实际sftp配置信息填写
 cn.worthy.sftp.host=
-cn.worthy.sftp.port=
+cn.worthy.sftp.port=22
 cn.worthy.sftp.username=
 cn.worthy.sftp.password=
 cn.worthy.sftp.basePath=
